# adj-ai

./: .gitignore  LICENSE  README.md  RECOMMENDATIONS.md  TODO.md  _exceptions.py  example.py  orchestrator.py  pyproject.toml
.github/workflows/: pr-tests.yml  release.yml
examples/: example.py
src/adj_ai/: __init__.py  orchestrator.py  provider.py
tests/: conftest.py  test_multi_provider.py  test_provider_anthropic.py  test_provider_deepseek.py  test_provider_openai.py
